[package]
name = "tweet-cleaner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
indexmap = "2.7"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
